# ncu-rs

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
src/: main.rs
src/options/: main.rs
src/utils/: main.rs
