[package]
name = "npm-check-updates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
futures-util = "0.3.28"
reqwest = "0.11.16"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = {version = "1.0.96", features = ["preserve_order"]}
tokio = {version = "1.28.0", features = ["full"]}
